--- a/project2/style.css
+++ b/project2/style.css
@@ -49,6 +49,11 @@ body{
     flex:1;
     justify-content: flex-end;
 }
+.header__bars{
+    display: none;
+}
+
+
 
 /* utility class */
 .btn{
@@ -65,7 +70,7 @@ body{
 /* hero section */
 .hero{
     width: 90%;
-    margin-inline: auto;
+    margin: 1rem auto;
     padding: 3rem;
     text-align: center;
     
@@ -75,12 +80,12 @@ body{
     line-height: 1.3;
     letter-spacing: -0.05rem;
     max-width: 30ch;
-    margin-inline:auto;
+    margin: 1rem auto;
 }
 .hero__text{
     font-size: 1.2rem;
     max-width: 60ch;
-    margin-inline: auto;
+    
     margin: 1rem auto ;
     line-height: 1.2;
 }
@@ -89,7 +94,7 @@ body{
 
 .pricing{
     width: 90%;
-    margin-inline: auto;
+    margin: 1rem auto;
     margin-top: 5rem;
 
 }
@@ -97,6 +102,7 @@ body{
     font-size: 2.5rem;
     letter-spacing: -0.05rem;
     line-height: 1;
+    margin: 1rem;
 
 }
 .pricing__description{
@@ -107,7 +113,9 @@ body{
 
 .pricing__container{
     display: flex;
-    justify-content: space-between;
+    gap: 2rem;
+    flex-wrap:wrap;
+
 }
 
 .pricing__card{
@@ -117,7 +125,9 @@ body{
     color: whitesmoke;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     flex: 1;
-    margin: 0 1rem;
+    margin: 1rem auto;
+    max-width: 350px;
+
 }
 
 .pricing__price{
@@ -192,6 +202,7 @@ body{
     max-width: 40ch;
 }
 
+/* Contact */
 .contact{
     margin-top: 4rem;
     text-align: center;
@@ -201,7 +212,6 @@ body{
 .contact__title{
     font-size: 1.6rem;
     letter-spacing: -0.05rem;
-    line-height: 1;
 }
 .contact__description{
     font-size: 1rem;
@@ -219,4 +229,153 @@ body{
     font-family: inherit;
     text-decoration: none;
     max-width: fit-content;
+}
+
+
+/* Media Queries */
+@media (max-width: 891px) {
+/* Header Section */
+
+    .header__title{
+        font-size: 1.2rem;
+    }
+    .header__link{
+        font-size: 0.8rem;
+    }
+    .header__btn{
+        font-size: 0.8rem;
+    }
+    .header__bars{
+    display: block;
+    }
+}
+/* Hero Section */
+
+    .hero__title{
+        font-size: 2rem;
+    }
+    .hero__text{
+        font-size: 1rem;
+    }
+/* Pricing */
+    .pricing__title{
+        font-size: 1.5rem;
+    }
+    .pricing__description{
+        font-size: 1rem;
+    }
+    .pricing__price{
+        font-size: 1.5rem;
+    }
+/* Features */
+    .features__title{
+        font-size: 1.5rem;
+    }
+    .features__description{
+        font-size: 1rem;
+    }
+    .features__box{
+        width: 300px;
+    }
+    .features{
+        margin-top: 0.5rem;
+    }
+@media (max-width: 768px) {
+    /* Header Section */
+    .header__title{
+        font-size: 1rem;
+    }
+    .header__menu{
+        display: none;
+    }
+    .header__btn-container{
+        display: none;
+    }
+    .header__bars{
+    display: block;
+}
+    }
+    /* Hero Section */
+    .hero__title{
+        font-size: 1.5rem;
+    }
+    .hero__text{
+        font-size: 0.9rem;
+    }
+    .hero__btn{
+        font-size: 0.8rem;
+    }
+    /* Pricing */
+    .pricing__title{
+        font-size: 1rem;
+    }
+    .pricing__description{
+        font-size: 0.9rem;
+    /* Features */
+    .features__box-title{
+        font-size: 1rem;
+    }
+    .features__box-description{
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    }
+    /* contact */
+    .contact__title{
+        font-size: 6rem;
+    }
+}
+
+@media (max-width: 425px){
+/* Header Section */
+    .header__title{
+        font-size: 0.5rem;
+    }
+    .header__bars{
+    display: block;
+}
+
+    /* Hero Title */
+    .hero__title{
+        font-size: 1.2rem;
+    }
+    /* Pricing */
+    .pricing__title{
+        font-size: 0.9rem;
+    }
+    .pricing__description{
+        font-size: 0.5rem;
+    }
+    .pricing__card{
+        min-width: 290px;
+
+    }
+    .pricing{
+        margin-top: -5rem;
+    }
+}
+
+/* Features */
+    .features__title{
+        font-size: 1.2rem;
+    }
+    .features__description{
+        font-size: 0.9rem;
+    }
+    .features__box{
+        width: 250px;
+    }
+/* contact */
+.contact__title{
+    font-size: 1rem;
+}
+.contact__description{
+    font-size: 0.8rem;
+    max-width: 90%;
+    margin: 1rem auto;
+}
+
+    .btnn{
+        font-size: 0.8rem;
+        padding: 0.3rem 0.5rem;
+    }
 }
