--- a/Final Project/styles/global.css
+++ b/Final Project/styles/global.css
@@ -12,6 +12,7 @@
   --clr-slate50: oklch(98.4% 0.003 247.858);
   --clr-slate800:#1e293b;
   --clr-slate300:#cbd5e1;
+  --clr-bg: #111827;
 
   /* sizes */
 
